add basic HTML layout

--- a/index.html
+++ b/index.html
@@ -2,16 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Greg Rowe | Graphic Designer</title>
+    <meta name="description" content="Greg Rowe Resume">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="site-container">
+        <header>
+            <h1>Greg Rowe</h1>
+            <h2>Graphic/Web Designer Extraordinaire</h2>
+        </header>
+
+        <main>
+            <h1 class="visuallyhidden">Resume</h1>
+
+            <section id="statement">
+                <h2 class="visuallyhidden">Opening Remarks</h2>
+                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+            </section>
+
+            <section id="experience">
+                <h2 class="visuallyhidden">Work Experience</h2>
+                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+            </section>
+
+            <section id="education">
+                <h2 class="visuallyhidden">Education</h2>
+                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+            </section>
+
+            <section id="skills">
+                <h2 class="visuallyhidden">Skills</h2>
+                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+            </section>
+
+            <section id="certifications">
+                <h2 class="visuallyhidden">Certifications</h2>
+                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+            </section>
+
+            <footer>
+                <h2 class="visuallyhidden">Contact Information</h2>
+                    <a href="mailto:greg.rowe@mydomain.com">greg.rowe@mydomain.com</a>
+                    <p> (254)555-1212</p>
+            </footer>
+
+        </main>
+    </div>
 
 
-
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
