add basic font styling

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Greg Rowe | Graphic Designer</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik+One" rel="stylesheet">
     <meta name="description" content="Greg Rowe Resume">
-
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="site-container">
         <header>
-            <h1>Greg Rowe</h1>
+            <h1>GREG ROWE</h1>
             <h2>Graphic/Web Designer Extraordinaire</h2>
         </header>
 
@@ -46,8 +46,7 @@
 
             <footer>
                 <h2 class="visuallyhidden">Contact Information</h2>
-                    <a href="mailto:greg.rowe@mydomain.com">greg.rowe@mydomain.com</a>
-                    <p> (254)555-1212</p>
+                <p><a href="mailto:greg.rowe@mydomain.com">greg.rowe@mydomain.com</a> | (254)555-1212</p>
             </footer>
 
         </main>
