add HTML resume content

--- a/index.html
+++ b/index.html
@@ -26,22 +26,36 @@
 
             <section id="experience">
                 <h2 class="visuallyhidden">Work Experience</h2>
-                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+                <p><strong>Operations Support Manager, L-3 Communications, Waco, TX 2009-Present</strong> - Manage a team of Manufacturing and Industrial Engineers dedicated to maintaining optimal operations performance on a multi million dollar aircraft maintenance contract. Responsibilities include working to various time and material budgets as well as initiation of process improvements designed to reduce costs and cycle time.</p>
+
+                <p><strong>Industrial Engineer, L-3 Communications, Waco, TX 2005-2009</strong> - Successfully led and implemented initiatives aimed at a reduction in aircraft modification installation times. Developed performance metrics to evaluate initiative effectiveness and to promote project sustainment.</p>
+
+                <p><strong>Team Leader, L-3 Communications, Waco, TX 2003-2005</strong> - Management of multiple teams of aircraft mechanics involved in maintenance and modification of multi million dollar aircraft platforms. Responsibilities included administrative duties associated with large teams of employees as well as performance of aircraft projects on time and within budget.</p>
             </section>
 
             <section id="education">
                 <h2 class="visuallyhidden">Education</h2>
-                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+                <ul>
+                    <li><strong>Master’s of Business Administration</strong> - Texas A&amp;M University Corpus Christi</li>
+                    <li><strong>Bachelor’s Degree in Business Administration</strong> - University of Texas at Arlington, Arlington, TX</li>
+                </ul>
             </section>
 
             <section id="skills">
                 <h2 class="visuallyhidden">Skills</h2>
-                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+                <ul>
+                    <li>HTML, CSS, JavaScript, jQuery</li>
+                    <li>Proficiency in AutoCAD, Adobe Photoshop, Illustrator</li>
+                    <li>Proficiency in Microsoft Word, Excel, and Powerpoint</li>
+                </ul>
             </section>
 
             <section id="certifications">
                 <h2 class="visuallyhidden">Certifications</h2>
-                <p>In the early stages of my life, I was always interested in computers and art. What better way to combine the two interests than graphic design. I began the process of teaching myself digital design about 20 years ago. To legitimize myself, I am currently enrolled in a Master's Program in Web Design at the University of Florida...and hope to finish soon.</p>
+                <ul>
+                    <li>Certified Six Sigma Black Belt</li>
+                    <li>FAA Airframe and Powerplant License</li>
+                </ul>
             </section>
 
             <footer>
