add styling css for HTML content

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 <body>
     <div class="site-container">
         <header>
-            <h1>GREG ROWE</h1>
-            <h2>Graphic/Web Designer Extraordinaire</h2>
+            <h1 id="name">GREG ROWE</h1>
+            <h2 id="subheading">Graphic/Web Designer Extraordinaire</h2>
         </header>
 
         <main>
             <h1 class="visuallyhidden">Resume</h1>
+
+            <section id="photo">
+                <h2 class="visuallyhidden">Resume Photo</h2>
+                <img id="resume-photo" src="img/resume-photo.jpg" alt="Greg Rowe Photo"/>
+            </section>
 
             <section id="statement">
                 <h2 class="visuallyhidden">Opening Remarks</h2>
@@ -25,7 +30,7 @@
             </section>
 
             <section id="experience">
-                <h2 class="visuallyhidden">Work Experience</h2>
+                <h2>Work Experience</h2>
                 <p><strong>Operations Support Manager, L-3 Communications, Waco, TX 2009-Present</strong> - Manage a team of Manufacturing and Industrial Engineers dedicated to maintaining optimal operations performance on a multi million dollar aircraft maintenance contract. Responsibilities include working to various time and material budgets as well as initiation of process improvements designed to reduce costs and cycle time.</p>
 
                 <p><strong>Industrial Engineer, L-3 Communications, Waco, TX 2005-2009</strong> - Successfully led and implemented initiatives aimed at a reduction in aircraft modification installation times. Developed performance metrics to evaluate initiative effectiveness and to promote project sustainment.</p>
@@ -34,7 +39,7 @@
             </section>
 
             <section id="education">
-                <h2 class="visuallyhidden">Education</h2>
+                <h2>Education</h2>
                 <ul>
                     <li><strong>Master’s of Business Administration</strong> - Texas A&amp;M University Corpus Christi</li>
                     <li><strong>Bachelor’s Degree in Business Administration</strong> - University of Texas at Arlington, Arlington, TX</li>
@@ -42,7 +47,7 @@
             </section>
 
             <section id="skills">
-                <h2 class="visuallyhidden">Skills</h2>
+                <h2>Skills</h2>
                 <ul>
                     <li>HTML, CSS, JavaScript, jQuery</li>
                     <li>Proficiency in AutoCAD, Adobe Photoshop, Illustrator</li>
@@ -51,7 +56,7 @@
             </section>
 
             <section id="certifications">
-                <h2 class="visuallyhidden">Certifications</h2>
+                <h2>Certifications</h2>
                 <ul>
                     <li>Certified Six Sigma Black Belt</li>
                     <li>FAA Airframe and Powerplant License</li>
