--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
 
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
