add Tooltipster jQuery plugin

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Greg Rowe Resume">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="js/tooltipster/dist/css/tooltipster.bundle.min.css" />
 </head>
 <body>
     <div class="site-container">
@@ -21,7 +22,7 @@
 
             <section id="photo">
                 <h2 class="visuallyhidden">Resume Photo</h2>
-                <img id="resume-photo" src="img/resume-photo.jpg" alt="Greg Rowe Photo"/>
+                <img id="resume-photo" src="img/resume-photo.jpg" class="tooltip" title="Greg is Awesome!" alt="Greg Rowe Photo"/>
             </section>
 
             <section id="statement">
@@ -75,6 +76,7 @@
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
+    <script src="js/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
